k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: final-backend
  labels:
    app: final-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: final-backend
  template:
    metadata:
      labels:
        app: final-backend
    spec:
      containers:
      - name: final-backend
        image: vesk18/final-backend:latest
        ports:
        - containerPort: 80
