k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: final-backend
spec:
  selector:
    app: final-backend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
