k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: final-backend
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: app.vesk18.devops7.test-danit.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: final-backend
            port:
              number: 80
